--- a/src/app/views/layout/layout.component.html
+++ b/src/app/views/layout/layout.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-    <button class="btn remove-focus float-right" (click)="isTableView = !isTableView">
+<div class="container-fluid mt-5">
+    <button class="btn remove-focus" (click)="isTableView = !isTableView">
         <i [ngClass]="isTableView ? 'fa fa-toggle-on font-size-24' : 'fa fa-toggle-off font-size-24'" aria-hidden="true"></i>
         <span class="title">{{isTableView ? 'Table View' : 'Grid View'}}</span>
     </button>
