--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+html, body { height: 100%; }
+body { 
+    margin: 0; 
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif; 
+    font-family: 'Stylish', sans-serif;
+}
 .error {
     color: #dc3545;
     font-size: 80%
