Implemented Heading in layout component

--- a/src/app/views/layout/layout.component.scss
+++ b/src/app/views/layout/layout.component.scss
@@ -11,3 +11,15 @@
 .font-size-24 {
     font-size: 24px;
 }
+
+.font-size-20 {
+    font-size: 20px;
+}
+
+.fa-color-blue {
+    color: blue;
+}
+
+.m-t-50vh {
+    margin-top: 50vh;
+}
