--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ body {
     font-family: 'Stylish', sans-serif;
 }
 .error {
-    color: #dc3545;
-    font-size: 80%
+    color: grey;
+    font-size: 28px;
+    opacity: 0.5;
 }
