--- a/src/app/views/layout/layout.component.html
+++ b/src/app/views/layout/layout.component.html
@@ -1,12 +1,23 @@
 <div class="container-fluid mt-5">
-    <button class="btn remove-focus" (click)="isTableView = !isTableView">
-        <i [ngClass]="isTableView ? 'fa fa-toggle-on font-size-24' : 'fa fa-toggle-off font-size-24'" aria-hidden="true"></i>
-        <span class="title">{{isTableView ? 'Table View' : 'Grid View'}}</span>
-    </button>
-    <ng-container *ngIf="!isTableView">
-        <app-grid [gridInfo]="remoteData"></app-grid>
+    <div class="text-center">
+        <p class="mb-0 font-size-24">Axion Group (View Changer Task)</p>
+        <p class="mb-0 font-size-20">Name: K Sai Kumar</p>
+        <p class="mb-0 font-size-20">Email: korthivadasaikumar@gmail.com</p>
+    </div>
+    <ng-container *ngIf="remoteData.length <= 0">
+        <p class="text-center m-t-50vh error"> No Records Found</p>
     </ng-container>
-    <ng-container *ngIf="isTableView">
-        <app-table [tableInfo]="remoteData"></app-table>
+    <ng-container *ngIf="remoteData.length > 0">
+        <button class="btn remove-focus" (click)="isTableView = !isTableView">
+            <i [ngClass]="isTableView ? 'fa fa-toggle-on font-size-24 fa-color-blue' : 'fa fa-toggle-off font-size-24'"
+                aria-hidden="true"></i>
+            <span class="title">{{isTableView ? 'Table View' : 'Grid View'}}</span>
+        </button>
+        <ng-container *ngIf="!isTableView">
+            <app-grid [gridInfo]="remoteData"></app-grid>
+        </ng-container>
+        <ng-container *ngIf="isTableView">
+            <app-table [tableInfo]="remoteData"></app-table>
+        </ng-container>
     </ng-container>
 </div>
